[BUGFIX] TCEforms: Localization value boxes are too wide
Releases: 4.6, 4.5
Resolves: #28030

--- a/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
@@ -191,9 +191,9 @@ table.typo3-TCEforms .class-main53 {
 
 table.typo3-TCEforms td.formField-header,
 table.typo3-TCEforms td.formField-field {
-	display: block;
 	position: relative;
 	padding-left: 10px;
+	padding-right: 10px;
 }
 
 table.typo3-TCEforms .formField,
